[package]
name = "todo_cli"
version = "0.1.0"
authors = ["Daniel Cardona <daniel.cardona@eagleview.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = "~2.27.0"